[package]
name = "tape_delay"
version = "0.1.1"
edition = "2021"
authors = ["Marinus Burger <convolution_official@protonmail.com>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/minburg/vst-tape-delay"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["standalone", "vst3"] }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" }
parking_lot = "0.12.5"
rand = "0.8.5"
image = "0.24"

[patch."https://github.com/RustAudio/baseview.git"]
baseview = { path = "./baseview-master" }

[workspace]
members = [
    "xtask",
]

[profile.release]
lto = "thin"
strip = true

[profile.dev.package."*"]
opt-level = 3
